<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PaymentFragment">

    <ImageButton
        android:id="@+id/btn_close_payment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_close"
        android:background="@drawable/bg_stepper_circle_inactive"
        app:tint="@color/app_stepper_inactive_text"
        android:contentDescription="@string/payment_close_button_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_payment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/payment_title"
        android:fontFamily="@font/komikax_family"
        android:textColor="@color/app_text_dark"
        android:textSize="32sp"

        app:layout_constraintTop_toBottomOf="@id/btn_close_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/ll_stepper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text="@string/one"
            android:gravity="center"
            android:background="@drawable/bg_stepper_circle_active"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold_family"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/app_pink_primary"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text="@string/two"
            android:gravity="center"
            android:background="@drawable/bg_stepper_circle_active"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold_family"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/app_pink_primary"
            android:layout_marginHorizontal="8dp"/>

        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text="@string/three"
            android:gravity="center"
            android:background="@drawable/bg_stepper_circle_active"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold_family"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cart_stepper_payment"
            android:textColor="@color/app_pink_primary"
            android:fontFamily="@font/montheavydemo_family"
            android:textStyle="bold"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/payment_bayar_button"
        android:textSize="18sp"
        android:fontFamily="@font/montheavydemo_family"
        android:backgroundTint="@color/app_pink_primary"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/payment_subtitle"
        android:fontFamily="@font/nasi_goreng_family"
        android:textColor="@color/app_text_dark"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/ll_stepper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_form_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_bayar">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:paddingHorizontal="16dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:useDefaultMargins="true">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_qris"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/app_pink_primary"> <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/qris"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:contentDescription="@string/payment_desc_qris"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_bank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/app_pink_light"> <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/bank"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:contentDescription="@string/payment_desc_bank"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_cod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/app_pink_light"> <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/tunai"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:contentDescription="@string/payment_desc_cod"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_dana"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/app_pink_light"> <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/dana"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:contentDescription="@string/payment_desc_dana"/>
            </com.google.android.material.card.MaterialCardView>

        </GridLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>